--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sebastianhoyoslopez.github.io/palindromo/",
+  "homepage": "https://sebastianhoyoslopez.github.io/palindromo",
   "name": "prueba2",
   "version": "0.1.0",
   "private": true,
